# wasm-sandbox

./: CMakeLists.txt
learn/marcoselvatici/call-js-on-c/c/: compile.sh  demo.c  demo.html  demo.js  demo.wasm
learn/marcoselvatici/first-app/c/: compile.sh
learn/marcoselvatici/first-app/cpp/: compile.sh
learn/marcoselvatici/func/c/: compile.sh  fib.js  fib.wasm
learn/marcoselvatici/func/cpp/: compile.sh  fib.cpp  fib.js  fib.wasm
learn/marcoselvatici/libraries/: compile.sh  main.c  main.js  main.wasm
learn/mozilla/compile-c-module/: compile.sh  webp.c  webp.html
